# fidra

./: .gitignore  BUGFIXES.md  FIDRA_BLUEPRINT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE4_SEARCH_FILTER.md  PHASE5_REPORTS_EXPORT.md  QUICKSTART.md  README.md  RECURRING_INSTANCES_FIX.md  cleanup_planned_transactions.py  convert_excel_to_db.py  fidra.spec  main.py  pyproject.toml  report_20260116.md  requirements.txt  run.sh
docs/: CNAME  app.js  cloud-setup-guide.html  cloud-setup-guide.md  index.html  styles.css
fidra/: app.py
fidra/data/: caching_repository.py  cloud_connection.py  factory.py  postgres_repo.py  repository.py  resilience.py  sqlite_repo.py  supabase_connection.py  supabase_repo.py  sync_queue.py  validation.py
fidra/domain/: models.py  settings.py
fidra/services/: attachments.py  audit.py  backup.py  balance.py  change_listener.py  cloud_attachments.py  connection_state.py  export.py  file_watcher.py  financial_year.py  forecast.py  migration.py  pdf_generator.py  report_builder.py  search.py  supabase_attachments.py  sync_service.py  undo.py
fidra/state/: app_state.py  observable.py  persistence.py
fidra/ui/: main_window.py  window_manager.py
fidra_backups/backup_20260206_132435_413929/: metadata.json
fidra_backups/backup_20260206_132556_884395/: metadata.json
fidra_backups/backup_20260206_140119_620945/: metadata.json
fidra_backups/backup_20260206_140507_398855/: metadata.json
fidra_backups/backup_20260206_141431_762448/: metadata.json
fidra_backups/backup_20260206_141604_561830/: metadata.json
fidra_backups/backup_20260206_141622_660180/: metadata.json
fidra_backups/backup_20260206_142736_107917/: metadata.json
fidra_backups/backup_20260206_143446_078424/: metadata.json
scripts/: build_macos.sh  build_windows.bat  generate_icons.py
tests/: conftest.py
(+67 files in other folders)
