[project]
name = "fidra"
version = "2.0.0"
description = "Local-first financial ledger application for treasurers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua Sullivan-Pena" }
]
dependencies = [
    "pyside6>=6.6.0",
    "qasync>=0.27.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "openpyxl>=3.1.0",
    "pyqtgraph>=0.13.0",
    "python-dateutil>=2.8.0",
    "reportlab>=4.0.0",
    "svglib>=0.9.0",
    "markdown>=3.5.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

build = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "qasync.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyqtgraph.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
